# KannaCommons

./: Cargo.toml  build.rs
protos/: arkalis.proto
src/: lib.rs
src/aoba/: mod.rs  upload.rs
src/arkalis/: anime.rs  anime_lists.rs  episode.rs  mod.rs  season.rs  source.rs  title.rs  user.rs
src/models/: mod.rs  season.rs
src/models/anime/: anime_infos.rs  anime_lists.rs  genres.rs  mod.rs  title.rs
src/repos/: anime_infos.rs  episode.rs  genres.rs  mod.rs  season.rs  source.rs  source_types.rs  user.rs
src/repos/anime/: lists.rs  mod.rs  title.rs
src/traits/: mod.rs  user.rs
