[package]
name = "kanna-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
tonic = "0.11.0"
prost = "0.12.3"
anyhow = "1.0.81"
reqwest = { version = "0.12.2", features = [
    "json",
    "rustls-tls",
], default-features = false }
clap = { version = "4.5.4", features = ["derive"], optional = true }

[build-dependencies]
tonic-build = "0.11"

[features]
enum = ["clap"]
