[package]
name = "kanna-commons"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
serde = { version = "1.0.199", features = ["derive"] }
tonic = { version = "0.11.0", features = ["tls-webpki-roots"] }
prost = "0.12.4"
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = [
    "json",
    "rustls-tls",
], default-features = false }
clap = { version = "4.5.4", features = ["derive"], optional = true }
kanna-models = {path = "C:\\Users\\Yummi\\CodigosFodas\\KannaModels"}

[build-dependencies]
tonic-build = "0.11"

[features]
enum = ["clap"]
